--- a/starter/frontend/Dockerfile
+++ b/starter/frontend/Dockerfile
@@ -2,7 +2,8 @@ FROM  public.ecr.aws/docker/library/node:18.14.2-alpine3.17
 
 ARG REACT_APP_MOVIE_API_URL
 # ENV REACT_APP_MOVIE_API_URL=${REACT_APP_MOVIE_API_URL}
-ENV REACT_APP_MOVIE_API_URL="http://aeb9614cc4f1c4751adc97420a70524b-784435929.us-east-1.elb.amazonaws.com"
+# ENV REACT_APP_MOVIE_API_URL="http://aeb9614cc4f1c4751adc97420a70524b-784435929.us-east-1.elb.amazonaws.com"
+ENV REACT_APP_MOVIE_API_URL=$REACT_APP_MOVIE_API_URL
 
 WORKDIR /app
 
